--- a/contact.html
+++ b/contact.html
@@ -307,7 +307,7 @@ Author URL: https://sportsmangist.com
 			<div class="footer-bottom">
 				<div class="wrap">
 					<div class="copyrights col-md-6">
-						<p> © 2018 NACOSS FUTO. All Rights Reserved | Design by  <a href="www.sportsmangist.com"> Arith ELezuo</a></p>
+						<p> © 2018 NACOSS FUTO. All Rights Reserved | Design by  <a href="www.sportsmangist.com"> Odii Chinedum</a></p>
 					</div>
 					<div class="footer-social-icons col-md-6">
 						<ul>
