--- a/about.html
+++ b/about.html
@@ -603,7 +603,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-bottom">
 			<div class="wrap">
 				<div class="copyrights col-md-6">
-					<p> © 2015 Express News. All Rights Reserved | Design by  <a href="http://w3layouts.com/"> W3layouts</a></p>
+					<p> © 2015 Express News. All Rights Reserved | Design by  <a Odii Chinedum</a></p>
 				</div>
 				<div class="footer-social-icons col-md-6">
 					<ul>
